testsuite/poke.pkl/typename-diag.pk
/* { dg-do compile } */

/* Make sure that the given names are used when referring
   to types in diagnostics.  */

type MyType = int;
fun bar = (MyType e) int: { return e; }

fun foo = int:
  {
   return bar ("wrong"); /* { dg-error "\n.*MyType" } */
  }
